--- a/config/default/user.role.editor.yml
+++ b/config/default/user.role.editor.yml
@@ -214,6 +214,7 @@ permissions:
   - 'schedule publishing of taxonomy_term'
   - 'switch shortcut sets'
   - 'translate article node'
+  - 'translate audio media'
   - 'translate block_content'
   - 'translate ceremonial_time taxonomy_term'
   - 'translate collection taxonomy_term'
@@ -224,6 +225,7 @@ permissions:
   - 'translate file media'
   - 'translate folders taxonomy_term'
   - 'translate heritage_item node'
+  - 'translate image media'
   - 'translate institution taxonomy_term'
   - 'translate item_type taxonomy_term'
   - 'translate landing_page_lb node'
@@ -237,9 +239,11 @@ permissions:
   - 'translate paragraph'
   - 'translate project node'
   - 'translate regions taxonomy_term'
+  - 'translate remote_video media'
   - 'translate seasonal_time taxonomy_term'
   - 'translate tags taxonomy_term'
   - 'translate traditional_knowledge_tk_labels taxonomy_term'
+  - 'translate video media'
   - 'update any media'
   - 'update content translations'
   - 'update media'
