--- a/config/default/user.role.full_member.yml
+++ b/config/default/user.role.full_member.yml
@@ -134,8 +134,10 @@ permissions:
   - 'create files'
   - 'create heritage_item content'
   - 'create image media'
+  - 'create landing_page_lb content'
   - 'create language_item content'
   - 'create media'
+  - 'create page content'
   - 'create relations'
   - 'create remote_video media'
   - 'create subuser 4'
@@ -164,6 +166,7 @@ permissions:
   - 'delete own heritage_item content'
   - 'delete own image files'
   - 'delete own image media'
+  - 'delete own landing_page_lb content'
   - 'delete own language_item content'
   - 'delete own page content'
   - 'delete own remote_video media'
@@ -181,13 +184,18 @@ permissions:
   - 'download own image files'
   - 'download own video files'
   - 'dropzone upload files'
+  - 'edit any article content'
   - 'edit any audio files'
   - 'edit any audio media'
   - 'edit any document files'
   - 'edit any document media'
   - 'edit any file media'
+  - 'edit any heritage_item content'
   - 'edit any image files'
   - 'edit any image media'
+  - 'edit any landing_page_lb content'
+  - 'edit any language_item content'
+  - 'edit any page content'
   - 'edit any remote_video media'
   - 'edit any video files'
   - 'edit any video media'
@@ -251,6 +259,7 @@ permissions:
   - 'set user expiration'
   - 'skip comment approval'
   - 'translate article node'
+  - 'translate audio media'
   - 'translate block_content'
   - 'translate ceremonial_time taxonomy_term'
   - 'translate collection taxonomy_term'
@@ -261,6 +270,7 @@ permissions:
   - 'translate file media'
   - 'translate folders taxonomy_term'
   - 'translate heritage_item node'
+  - 'translate image media'
   - 'translate institution taxonomy_term'
   - 'translate item_type taxonomy_term'
   - 'translate landing_page_lb node'
@@ -273,9 +283,11 @@ permissions:
   - 'translate page node'
   - 'translate project node'
   - 'translate regions taxonomy_term'
+  - 'translate remote_video media'
   - 'translate seasonal_time taxonomy_term'
   - 'translate tags taxonomy_term'
   - 'translate traditional_knowledge_tk_labels taxonomy_term'
+  - 'translate video media'
   - 'update any basic block content'
   - 'update any media'
   - 'update any varbase_html_code_block block content'
@@ -319,6 +331,7 @@ permissions:
   - 'view icons'
   - 'view language_item revisions'
   - 'view latest version'
+  - 'view own field_gks_id'
   - 'view own field_make_role'
   - 'view own files'
   - 'view own private files'
