--- a/config/default/user.role.guest_member.yml
+++ b/config/default/user.role.guest_member.yml
@@ -127,6 +127,7 @@ permissions:
   - 'edit any audio media'
   - 'edit any document media'
   - 'edit any image media'
+  - 'edit any language_item content'
   - 'edit any remote_video media'
   - 'edit any video media'
   - 'edit own article content'
@@ -153,6 +154,7 @@ permissions:
   - 'search language_item content'
   - 'skip comment approval'
   - 'translate article node'
+  - 'translate audio media'
   - 'translate block_content'
   - 'translate ceremonial_time taxonomy_term'
   - 'translate collection taxonomy_term'
@@ -163,6 +165,7 @@ permissions:
   - 'translate file media'
   - 'translate folders taxonomy_term'
   - 'translate heritage_item node'
+  - 'translate image media'
   - 'translate institution taxonomy_term'
   - 'translate item_type taxonomy_term'
   - 'translate landing_page_lb node'
@@ -175,9 +178,11 @@ permissions:
   - 'translate page node'
   - 'translate project node'
   - 'translate regions taxonomy_term'
+  - 'translate remote_video media'
   - 'translate seasonal_time taxonomy_term'
   - 'translate tags taxonomy_term'
   - 'translate traditional_knowledge_tk_labels taxonomy_term'
+  - 'translate video media'
   - 'update any media'
   - 'update content translations'
   - 'update media'
@@ -200,6 +205,7 @@ permissions:
   - 'view icons'
   - 'view language_item revisions'
   - 'view latest version'
+  - 'view own field_gks_id'
   - 'view own unpublished content'
   - 'view own unpublished media'
   - 'view page revisions'
