--- a/config/default/user.role.manager.yml
+++ b/config/default/user.role.manager.yml
@@ -95,6 +95,7 @@ dependencies:
     - scheduler
     - script_manager
     - search_api
+    - search_api_tracking
     - shortcut
     - simple_sitemap
     - styleguide
@@ -159,6 +160,7 @@ permissions:
   - 'access webform overview'
   - 'access webform submission user'
   - 'add JS snippets for google analytics'
+  - 'administer admin menu items'
   - 'administer block classes'
   - 'administer blocks'
   - 'administer comments'
@@ -201,6 +203,7 @@ permissions:
   - 'create files'
   - 'create heritage_item content'
   - 'create image media'
+  - 'create landing_page_lb content'
   - 'create language_item content'
   - 'create media'
   - 'create page content'
@@ -229,6 +232,9 @@ permissions:
   - 'create terms in tags'
   - 'create terms in traditional_knowledge_tk_labels'
   - 'create url aliases'
+  - 'create varbase_html_code_block block content'
+  - 'create varbase_media_block block content'
+  - 'create varbase_rich_text_block block content'
   - 'create video media'
   - 'create webform'
   - 'customize shortcut links'
@@ -236,16 +242,20 @@ permissions:
   - 'delete any article content'
   - 'delete any audio files'
   - 'delete any audio media'
+  - 'delete any basic block content'
   - 'delete any document files'
   - 'delete any document media'
   - 'delete any file media'
   - 'delete any heritage_item content'
   - 'delete any image files'
   - 'delete any image media'
+  - 'delete any landing_page_lb content'
   - 'delete any language_item content'
   - 'delete any media'
   - 'delete any page content'
   - 'delete any remote_video media'
+  - 'delete any varbase_media_block block content'
+  - 'delete any varbase_rich_text_block block content'
   - 'delete any video files'
   - 'delete any video media'
   - 'delete any webform submission'
@@ -264,6 +274,7 @@ permissions:
   - 'delete own heritage_item content'
   - 'delete own image files'
   - 'delete own image media'
+  - 'delete own landing_page_lb content'
   - 'delete own language_item content'
   - 'delete own page content'
   - 'delete own remote_video media'
@@ -411,6 +422,7 @@ permissions:
   - 'flush caches'
   - 'have total control'
   - 'manage password reset'
+  - 'manage search api tracking settings'
   - 'mass add and create users'
   - 'merge terms'
   - 'opt-in or out of google analytics tracking'
@@ -436,6 +448,8 @@ permissions:
   - 'revert varbase_heroslider_media revisions'
   - 'revert video media revisions'
   - 'run cron jobs'
+  - 'schedule publishing of media'
+  - 'schedule publishing of nodes'
   - 'schedule publishing of taxonomy_term'
   - 'search all excluded entities'
   - 'search content'
@@ -460,6 +474,7 @@ permissions:
   - 'translate file media'
   - 'translate folders taxonomy_term'
   - 'translate heritage_item node'
+  - 'translate image media'
   - 'translate institution taxonomy_term'
   - 'translate interface'
   - 'translate item_type taxonomy_term'
@@ -473,10 +488,12 @@ permissions:
   - 'translate page node'
   - 'translate project node'
   - 'translate regions taxonomy_term'
+  - 'translate remote_video media'
   - 'translate seasonal_time taxonomy_term'
   - 'translate tags taxonomy_term'
   - 'translate traditional_knowledge_tk_labels taxonomy_term'
   - 'translate varbase_heroslider_media node'
+  - 'translate video media'
   - 'update any basic block content'
   - 'update any media'
   - 'update any varbase_html_code_block block content'
