--- a/config/default/user.role.research_assistant.yml
+++ b/config/default/user.role.research_assistant.yml
@@ -66,6 +66,7 @@ dependencies:
     - responsive_preview
     - scheduler
     - shortcut
+    - styleguide
     - system
     - taxonomy
     - toolbar
@@ -131,8 +132,10 @@ permissions:
   - 'create files'
   - 'create heritage_item content'
   - 'create image media'
+  - 'create landing_page_lb content'
   - 'create language_item content'
   - 'create media'
+  - 'create page content'
   - 'create relations'
   - 'create remote_video media'
   - 'create terms in tags'
@@ -155,6 +158,7 @@ permissions:
   - 'delete own heritage_item content'
   - 'delete own image files'
   - 'delete own image media'
+  - 'delete own landing_page_lb content'
   - 'delete own language_item content'
   - 'delete own page content'
   - 'delete own remote_video media'
@@ -170,10 +174,15 @@ permissions:
   - 'download own image files'
   - 'download own video files'
   - 'dropzone upload files'
+  - 'edit any article content'
   - 'edit any audio media'
   - 'edit any document media'
   - 'edit any file media'
+  - 'edit any heritage_item content'
   - 'edit any image media'
+  - 'edit any landing_page_lb content'
+  - 'edit any language_item content'
+  - 'edit any page content'
   - 'edit any remote_video media'
   - 'edit any video media'
   - 'edit own article content'
@@ -182,6 +191,7 @@ permissions:
   - 'edit own comments'
   - 'edit own document files'
   - 'edit own document media'
+  - 'edit own field_gks_id'
   - 'edit own field_make_role'
   - 'edit own field_record_editable_by'
   - 'edit own file media'
@@ -230,7 +240,9 @@ permissions:
   - 'search project content'
   - 'search resource content'
   - 'skip comment approval'
+  - 'switch shortcut sets'
   - 'translate article node'
+  - 'translate audio media'
   - 'translate block_content'
   - 'translate ceremonial_time taxonomy_term'
   - 'translate collection taxonomy_term'
@@ -241,6 +253,7 @@ permissions:
   - 'translate file media'
   - 'translate folders taxonomy_term'
   - 'translate heritage_item node'
+  - 'translate image media'
   - 'translate institution taxonomy_term'
   - 'translate item_type taxonomy_term'
   - 'translate landing_page_lb node'
@@ -253,9 +266,11 @@ permissions:
   - 'translate page node'
   - 'translate project node'
   - 'translate regions taxonomy_term'
+  - 'translate remote_video media'
   - 'translate seasonal_time taxonomy_term'
   - 'translate tags taxonomy_term'
   - 'translate traditional_knowledge_tk_labels taxonomy_term'
+  - 'translate video media'
   - 'update any basic block content'
   - 'update any media'
   - 'update any varbase_html_code_block block content'
@@ -307,4 +322,5 @@ permissions:
   - 'view scheduled content'
   - 'view scheduled media'
   - 'view scheduled taxonomy_term'
+  - 'view style guides'
   - 'view the administration theme'
