--- a/config/default/user.role.test_role.yml
+++ b/config/default/user.role.test_role.yml
@@ -187,6 +187,7 @@ permissions:
   - 'schedule publishing of nodes'
   - 'schedule publishing of taxonomy_term'
   - 'translate article node'
+  - 'translate audio media'
   - 'translate block_content'
   - 'translate ceremonial_time taxonomy_term'
   - 'translate collection taxonomy_term'
@@ -197,6 +198,7 @@ permissions:
   - 'translate file media'
   - 'translate folders taxonomy_term'
   - 'translate heritage_item node'
+  - 'translate image media'
   - 'translate institution taxonomy_term'
   - 'translate item_type taxonomy_term'
   - 'translate landing_page_lb node'
@@ -209,12 +211,15 @@ permissions:
   - 'translate page node'
   - 'translate project node'
   - 'translate regions taxonomy_term'
+  - 'translate remote_video media'
   - 'translate seasonal_time taxonomy_term'
   - 'translate tags taxonomy_term'
   - 'translate traditional_knowledge_tk_labels taxonomy_term'
+  - 'translate video media'
   - 'update any basic block content'
   - 'update any media'
   - 'update any varbase_html_code_block block content'
+  - 'update any varbase_media_block block content'
   - 'update any varbase_rich_text_block block content'
   - 'update content translations'
   - 'update media'
