--- a/docroot/modules/contrib/varbase_core/composer.json
+++ b/docroot/modules/contrib/varbase_core/composer.json
@@ -37,7 +37,7 @@
     "drupal/config_ignore": "~3.0",
     "drupal/config_filter": "~2.0",
     "drupal/config_inspector": "~2.0",
-    "drupal/ctools": "~3.0",
+    "drupal/ctools": "~3.0.0 || ~4.0.0",
     "drupal/token": "~1.0",
     "drupal/token_filter": "~2.0",
     "drupal/page_manager": "~4.0",
@@ -59,7 +59,7 @@
     "drupal/entity_usage": "~2.0",
     "drupal/entityqueue": "~1.0",
     "drupal/entityqueue_form_widget": "~2.0",
-    "drupal/inline_entity_form": "2.0.0-beta6",
+    "drupal/inline_entity_form": "2.0.0-rc2",
     "drupal/ultimate_cron": "~2.0",
     "drupal/persistent_login": "1.6.0",
     "drupal/userprotect": "~1.0",
@@ -70,7 +70,7 @@
     "drupal/config_perms": "~2.0",
     "drupal/roleassign": "~2.0",
     "drupal/prevent_homepage_deletion": "~2.0",
-    "drupal/admin_toolbar": "~3.0",
+    "drupal/admin_toolbar": "~3.4.0",
     "drupal/tour_ui": "~1.0",
     "drupal/coffee": "~1.0",
     "drupal/responsive_preview": "~2.0",
