--- a/docroot/modules/contrib/inline_entity_form/inline_entity_form.info.yml
+++ b/docroot/modules/contrib/inline_entity_form/inline_entity_form.info.yml
@@ -2,10 +2,9 @@ name: Inline Entity Form
 description: "Provides a widget for inline management (creation, modification, removal) of referenced entities. "
 type: module
 package: Fields
-core_version_requirement: ^8.8 || ^9 || ^10
-php: 7.1
+core_version_requirement: ^9.1 || ^10
 
-# Information added by Drupal.org packaging script on 2023-05-13
-version: '2.0.0-beta6'
+# Information added by Drupal.org packaging script on 2023-05-16
+version: '2.0.0-rc2'
 project: 'inline_entity_form'
-datestamp: 1683970985
+datestamp: 1684239178
