--- a/docroot/modules/contrib/inline_entity_form/tests/modules/inline_entity_form_test/inline_entity_form_test.info.yml
+++ b/docroot/modules/contrib/inline_entity_form/tests/modules/inline_entity_form_test/inline_entity_form_test.info.yml
@@ -1,7 +1,7 @@
 name: "IEF test"
 type: module
 description: "Support module for the Inline entity form module tests."
-core_version_requirement: ^8.7.7 || ^9 || ^10
+core_version_requirement: ^9.1 || ^10
 package: Testing
 dependencies:
   - inline_entity_form:inline_entity_form
@@ -9,7 +9,7 @@ dependencies:
   - drupal:file
   - drupal:image
 
-# Information added by Drupal.org packaging script on 2023-05-13
-version: '2.0.0-beta6'
+# Information added by Drupal.org packaging script on 2023-05-16
+version: '2.0.0-rc2'
 project: 'inline_entity_form'
-datestamp: 1683970985
+datestamp: 1684239178
