--- a/docroot/modules/contrib/panels/panels.info.yml
+++ b/docroot/modules/contrib/panels/panels.info.yml
@@ -1,16 +1,17 @@
+# Initial Conversion to info.yml file for d8.
 name: Panels
 description: 'Core Panels display functions; provides no external UI, at least one other Panels module should be enabled.'
 type: module
 package: Panels
-core_version_requirement: '^9.2 || ^10'
+core_version_requirement: '^8.8 || ^9'
 configure: panels.admin
 dependencies:
-  - ctools:ctools
-  - drupal:layout_discovery
+  - ctools
+  - layout_discovery
 test_dependencies:
-  - page_manager:page_manager
+  - page_manager
 
-# Information added by Drupal.org packaging script on 2022-11-16
-version: '8.x-4.7'
+# Information added by Drupal.org packaging script on 2020-04-02
+version: '8.x-4.6'
 project: 'panels'
-datestamp: 1668632923
+datestamp: 1585870869
