--- a/docroot/modules/contrib/panels/panels_ipe/panels_ipe.info.yml
+++ b/docroot/modules/contrib/panels/panels_ipe/panels_ipe.info.yml
@@ -1,14 +1,14 @@
 name: Panels IPE
 type: module
 description: Panels In-place editor.
-core_version_requirement: '^9.2 || ^10'
+core_version_requirement: '^8.8 || ^9'
 package: Panels
 dependencies:
-  - drupal:block_content
+  - block_content
   - jquery_ui_droppable:jquery_ui_droppable
-  - panels:panels
+  - panels
 
-# Information added by Drupal.org packaging script on 2022-11-16
-version: '8.x-4.7'
+# Information added by Drupal.org packaging script on 2020-04-02
+version: '8.x-4.6'
 project: 'panels'
-datestamp: 1668632923
+datestamp: 1585870869
