--- a/docroot/modules/contrib/panels/panels_ipe/tests/modules/panels_ipe_page_manager_test_config/panels_ipe_page_manager_test_config.info.yml
+++ b/docroot/modules/contrib/panels/panels_ipe/tests/modules/panels_ipe_page_manager_test_config/panels_ipe_page_manager_test_config.info.yml
@@ -1,12 +1,13 @@
 name: 'Page Manager test configuration for Panels IPE'
 type: module
 description: 'Provides default configuration to test Page Manager.'
+core_version_requirement: '^8.8 || ^9'
 package: Testing
 dependencies:
-  - page_manager:page_manager
-  - panels:panels_ipe
+  - page_manager
+  - panels_ipe
 
-# Information added by Drupal.org packaging script on 2022-11-16
-version: '8.x-4.7'
+# Information added by Drupal.org packaging script on 2020-04-02
+version: '8.x-4.6'
 project: 'panels'
-datestamp: 1668632923
+datestamp: 1585870869
