--- a/config/default/mailsystem.settings.yml
+++ b/config/default/mailsystem.settings.yml
@@ -2,3 +2,8 @@ theme: current
 defaults:
   sender: swiftmailer
   formatter: swiftmailer
+modules:
+  webform:
+    none:
+      sender: swiftmailer
+      formatter: swiftmailer
