--- a/config/default/linkit.linkit_profile.linkit_all_nodes.yml
+++ b/config/default/linkit.linkit_profile.linkit_all_nodes.yml
@@ -6,19 +6,21 @@ dependencies:
     - node
 _core:
   default_config_hash: JGw5L48dnmlQMVOUC964t15okFyoU8AYBJSD2tVGrjI
-id: linkit_all_nodes
 label: 'Linkit: All Nodes'
+id: linkit_all_nodes
 description: ''
 matchers:
   bc3b1ccd-ac4e-4c5c-901d-d90449d9d974:
-    uuid: bc3b1ccd-ac4e-4c5c-901d-d90449d9d974
     id: 'entity:node'
-    weight: 0
+    uuid: bc3b1ccd-ac4e-4c5c-901d-d90449d9d974
     settings:
-      result_description: ''
-      bundles: {  }
-      group_by_bundle: true
-      include_unpublished: false
       metadata: ''
+      bundles:
+        heritage_item: heritage_item
+        language_item: language_item
+      group_by_bundle: true
       substitution_type: canonical
       limit: 100
+      include_unpublished: false
+      result_description: ''
+    weight: 0
