--- a/config/default/block.block.views_block__recent_articles_block_1.yml
+++ b/config/default/block.block.views_block__recent_articles_block_1.yml
@@ -27,6 +27,7 @@ settings:
   provider: views
   views_label: ''
   items_per_page: none
+  exposed: {  }
 visibility:
   user_status:
     id: user_status
