--- a/config/default/user.role.editor.yml
+++ b/config/default/user.role.editor.yml
@@ -40,7 +40,6 @@ dependencies:
     - workflows.workflow.varbase_simple_workflow
   module:
     - block_content
-    - coffee
     - config_perms
     - content_moderation
     - content_translation
@@ -87,7 +86,6 @@ permissions:
   - 'Rebuild theme registry from admin toolbar'
   - 'access administration pages'
   - 'access carousels_media_browser entity browser pages'
-  - 'access coffee'
   - 'access content overview'
   - 'access contextual links'
   - 'access editor_media_browser entity browser pages'
@@ -150,6 +148,7 @@ permissions:
   - 'delete any remote_video media'
   - 'delete any tweet media'
   - 'delete any video media'
+  - 'delete content translations'
   - 'delete media'
   - 'delete own article content'
   - 'delete own audio media'
