--- a/config/default/views.view.glossary.yml
+++ b/config/default/views.view.glossary.yml
@@ -251,7 +251,20 @@ display:
       cache:
         type: tag
         options: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: text
+          empty: true
+          content:
+            value: "<p>Sorry, no results for this filter. Click Reset and try other filter.</p>\r\n<h4>Search Tips</h4>\r\n<ul>\r\n<li>try filtering by other, more general filter.</li>\r\n<li>use specialized Search on top of the page and use single or more general word</li>"
+            format: full_html
+          tokenize: false
       sorts: {  }
       arguments:
         title:
